[package]
name = "hello-rio"
version = "0.1.0"
edition = "2024"
rust-version = "1.89.0"
license = "MIT"
description = "Canonical WASI HTTP service deployable to rio via substrate's wasi-service-flux-flake"
repository = "https://github.com/pleme-io/hello-rio"

[[bin]]
name = "hello-rio"
path = "src/main.rs"

[dependencies]
# WASI HTTP server (component model). The runtime is provided by the
# wasm-engine container at deploy time; locally `nix run .#default`
# invokes wasmtime directly with the compiled .wasm.
wasi = "0.14"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true

[lints.clippy]
pedantic = "warn"
