[package]
name = "hello-rio"
version = "0.1.0"
edition = "2024"
rust-version = "1.89.0"
license = "MIT"
description = "Canonical Rust-authored caixa Servico — wasm32-wasip2 HTTP service. Companion to programs/hello-world (Lisp)."
repository = "https://github.com/pleme-io/hello-rio"

[[bin]]
name = "hello-rio"
path = "src/main.rs"

[dependencies]
# wstd — stdlib-shaped WASI 0.2 layer. Provides http::server::serve plus
# the proxy world entrypoint (#[wstd::http_server]) so the same .wasm
# behaves both as a `wasi:cli/run` command and as a `wasi:http/proxy`
# component. wasmtime serves it directly via `wasmtime serve`.
wstd = "=0.5.0"

# Direct WASI bindings — provided by wstd transitively but pinned here to
# keep the surface explicit (component-model conventions, capability list).
wasi = "0.14"

# Pin wasip2 to the wasi-0.2.4 cohort so the resulting component targets
# WIT 0.2.4 imports (wstd's transitive default is 0.2.9 via wasip2 1.0.3,
# which only links against wasmtime ≥44 — and wasmtime 43 is what nixpkgs
# ships today). When wasmtime 44+ lands in nixpkgs, drop this pin.
wasip2 = "=1.0.1"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true

[lints.clippy]
pedantic = "warn"
